Added a feature to add and remove itmes to and from cart

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -22,18 +22,30 @@
           <!-- Links -->
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">All
+              <a class="nav-link" href="#">Audio book
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Shirts</a>
+              <a class="nav-link" href="#">Album</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sport wears</a>
+              <a class="nav-link" href="#">News paper</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Outwears</a>
+              <a class="nav-link" href="#">Magazine</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Radio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Speech</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Interview</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Lecture</a>
             </li>
 
           </ul>
@@ -70,7 +82,7 @@
 
               <div class="card-body text-center">
                 <a href="" class="grey-text">
-                  <h5>{{ item.get_category_display }}</h5>
+                  <h5>{{ item.get_media_format_display }}</h5>
                 </a>
                 <h5>
                   <strong>
