--- a/app/templates/order_summary.html
+++ b/app/templates/order_summary.html
@@ -10,31 +10,27 @@
         <thead>
         <tr>
             <th scope="col">#</th>
-            <th scope="col">Item title</th>
+            <th scope="col">Title</th>
             <th scope="col">Price</th>
             <th scope="col">Quantity</th>
             <th scope="col">Total Item Price</th>
         </tr>
         </thead>
         <tbody>
-        {% for order_item in object.items.all %}
+        {% for order_media in object.medias.all %}
         <tr>
             <th scope="row">{{ forloop.counter }}</th>
-            <td>{{ order_item.item.title }}</td>
-            <td>{{ order_item.item.price }}</td>
+            <td>{{ order_media.media.title }}</td>
+            <td>{{ order_media.media.price }}</td>
+            <td>1</td>
             <td>
-                <a href="{% url 'core:remove-single-item-from-cart' order_item.item.slug %}"><i class="fas fa-minus mr-2"></i></a>
-                {{ order_item.quantity }}
-                <a href="{% url 'core:add-to-cart' order_item.item.slug %}"><i class="fas fa-plus ml-2"></i></a>
-            </td>
-            <td>
-            {% if order_item.item.discount_price %}
-                ${{ order_item.get_total_discount_item_price }}
-                <span class="badge badge-primary">Saving ${{ order_item.get_amount_saved }}</span>
+            {% if order_media.media.discount_price %}
+                ${{ order_media.get_total_discount_item_price }}
+                <span class="badge badge-primary">Saving ${{ order_media.get_amount_saved }}</span>
             {% else %}
-                ${{ order_item.get_total_item_price }}
+                ${{ order_media.get_total_item_price }}
             {% endif %}
-            <a style='color: red;' href="{% url 'core:remove-from-cart' order_item.item.slug %}">
+            <a style='color: red;' href="{% url 'ecommerce:remove-from-cart' order_media.media.slug %}">
                 <i class="fas fa-trash float-right"></i>
             </a>
             </td>
