--- a/app/templates/order_snippet.html
+++ b/app/templates/order_snippet.html
@@ -1,16 +1,15 @@
 <div class="col-md-12 mb-4">
     <h4 class="d-flex justify-content-between align-items-center mb-3">
     <span class="text-muted">Your cart</span>
-    <span class="badge badge-secondary badge-pill">{{ order.items.count }}</span>
+    <span class="badge badge-secondary badge-pill">{{ order.medias.count }}</span>
     </h4>
     <ul class="list-group mb-3 z-depth-1">
-    {% for order_item in order.items.all %}
+    {% for order_media in order.medias.all %}
     <li class="list-group-item d-flex justify-content-between lh-condensed">
         <div>
-        <h6 class="my-0">{{ order_item.quantity }} x {{ order_item.item.title}}</h6>
-        <small class="text-muted">{{ order_item.item.description}}</small>
+        <h6 class="my-0">{{ order_media.media.title}}</h6>
         </div>
-        <span class="text-muted">${{ order_item.get_final_price }}</span>
+        <span class="text-muted">${{ order_media.get_final_price }}</span>
     </li>
     {% endfor %}
     {% if order.coupon %}
@@ -29,7 +28,7 @@
     </ul>
 
     {% if DISPLAY_COUPON_FORM %}
-    <form class="card p-2" action="" method="POST">
+    <form class="card p-2" action="{% url 'ecommerce:add-coupon' %}" method="POST">
         {% csrf_token %}
         <div class="input-group">
             {{ couponform.code }}
