Add image resize feature using celery

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -74,7 +74,9 @@
 
               <div class="view overlay">
                 {% comment %} <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg" class="card-img-top" {% endcomment %}
+                {% if item.image %}
                 <img src="{{ item.image.url }}" class="card-img-top">
+                {% endif %}
                 <a href="{{ item.get_absolute_url }}">
                   <div class="mask rgba-white-slight"></div>
                 </a>
